; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_parse.c_ConvertTokenToKeyword.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_parse.c_ConvertTokenToKeyword.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [25 x i8] c"ConvertTokenToKeyword()\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c" \00", align 1
@RegKeyWords = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [34 x i8] c"ConvertTokenToKeyword(): success\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ConvertTokenToKeyword(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [256 x i8], align 16
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = call i32 @DPRINT(i32 ptrtoint ([25 x i8]* @.str to i32))
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @StrLenUpToWhiteChar(i32 %9, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i64 %10, i64* %7, align 8
  %11 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %12 = load i32, i32* %4, align 4
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @PICE_strncpy(i8* %11, i32 %12, i64 %13)
  %15 = load i64, i64* %7, align 8
  %16 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 %15
  store i8 0, i8* %16, align 1
  %17 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @RegKeyWords, align 4
  %20 = call i64 @ReplaceKeywordWithValue(i8* %17, i32 %18, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %2
  %23 = call i32 @DPRINT(i32 ptrtoint ([34 x i8]* @.str.2 to i32))
  %24 = load i32, i32* @TRUE, align 4
  store i32 %24, i32* %3, align 4
  br label %27

25:                                               ; preds = %2
  %26 = load i32, i32* @FALSE, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %25, %22
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i64 @StrLenUpToWhiteChar(i32, i8*) #1

declare dso_local i32 @PICE_strncpy(i8*, i32, i64) #1

declare dso_local i64 @ReplaceKeywordWithValue(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
